{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 27,
  "lineage": "2408023e-0148-dc12-acca-54cdbcdf067f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c0c69ca1a19b60e",
            "association_id": "eipassoc-01fdd483c36fdb35b",
            "domain": "vpc",
            "id": "eipalloc-00c0c69ca1a19b60e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08519cf279f8fee38",
            "private_dns": "ip-10-0-0-111.ec2.internal",
            "private_ip": "10.0.0.111",
            "public_dns": "ec2-44-212-250-72.compute-1.amazonaws.com",
            "public_ip": "44.212.250.72",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053712787477:internet-gateway/igw-0cf9aff9b84335b11",
            "id": "igw-0cf9aff9b84335b11",
            "owner_id": "053712787477",
            "tags": {
              "Name": "Vsglobal-IGW"
            },
            "tags_all": {
              "Name": "Vsglobal-IGW"
            },
            "vpc_id": "vpc-0b1b614545bf2d552"
          },
          "dependencies": [
            "aws_vpc.vsglobal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c0c69ca1a19b60e",
            "connectivity_type": "public",
            "id": "nat-019ccadafdd28ccfe",
            "network_interface_id": "eni-0d5b2fc22b92a59de",
            "private_ip": "10.0.2.181",
            "public_ip": "44.212.250.72",
            "subnet_id": "subnet-0ee044661cc98ffe6",
            "tags": {
              "Name": "vsglobal-gw-NAT"
            },
            "tags_all": {
              "Name": "vsglobal-gw-NAT"
            }
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053712787477:route-table/rtb-08be5cc1d7e71da2f",
            "id": "rtb-08be5cc1d7e71da2f",
            "owner_id": "053712787477",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-019ccadafdd28ccfe",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vsglobal_private_rt_table"
            },
            "tags_all": {
              "Name": "vsglobal_private_rt_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1b614545bf2d552"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.ngw",
            "aws_subnet.subnet1",
            "aws_vpc.vsglobal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053712787477:route-table/rtb-0f543fce006afa7b7",
            "id": "rtb-0f543fce006afa7b7",
            "owner_id": "053712787477",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf9aff9b84335b11",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pub_route_table"
            },
            "tags_all": {
              "Name": "Pub_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1b614545bf2d552"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vsglobal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e00c4fc184315042",
            "route_table_id": "rtb-0f543fce006afa7b7",
            "subnet_id": "subnet-0b90dc012730e1a51"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub_rt",
            "aws_subnet.sub1",
            "aws_vpc.vsglobal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bb0205e9ed62112",
            "route_table_id": "rtb-0f543fce006afa7b7",
            "subnet_id": "subnet-0fb92d6fa8057fc46"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub_rt",
            "aws_subnet.sub2",
            "aws_vpc.vsglobal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a129b49808ee471a",
            "route_table_id": "rtb-08be5cc1d7e71da2f",
            "subnet_id": "subnet-0ee044661cc98ffe6"
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.ngw",
            "aws_route_table.pri_rt",
            "aws_subnet.subnet1",
            "aws_vpc.vsglobal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053712787477:subnet/subnet-0b90dc012730e1a51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b90dc012730e1a51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053712787477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vsglobal-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "vsglobal-Public-Subnet-1"
            },
            "vpc_id": "vpc-0b1b614545bf2d552"
          },
          "dependencies": [
            "aws_vpc.vsglobal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053712787477:subnet/subnet-0fb92d6fa8057fc46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb92d6fa8057fc46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053712787477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vsglobal-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "vsglobal-Public-Subnet-2"
            },
            "vpc_id": "vpc-0b1b614545bf2d552"
          },
          "dependencies": [
            "aws_vpc.vsglobal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053712787477:subnet/subnet-0ee044661cc98ffe6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee044661cc98ffe6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053712787477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-01"
            },
            "tags_all": {
              "Name": "Private-Subnet-01"
            },
            "vpc_id": "vpc-0b1b614545bf2d552"
          },
          "dependencies": [
            "aws_vpc.vsglobal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vsglobal-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053712787477:vpc/vpc-0b1b614545bf2d552",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-093110c275de5c653",
            "default_route_table_id": "rtb-0f8030ece8a0f92dc",
            "default_security_group_id": "sg-04a2f9d227fdb608d",
            "dhcp_options_id": "dopt-0c690c1ef5125d784",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1b614545bf2d552",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8030ece8a0f92dc",
            "owner_id": "053712787477",
            "tags": {
              "Name": "vsglobal-terraform-vpc"
            },
            "tags_all": {
              "Name": "vsglobal-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}